--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ org.gradle.jvmargs=-Xmx1536m
 
 # Specify api key in your user's gradle.properties ($HOME/.gradle)
 aarrstat_api_key=""
+aarrstat_api_url="https://aarrstat.aarr.com"
