--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.danielsundberg.yarr"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 9
-        versionName '2.0.0'
+        versionCode 11
+        versionName '2.0.2'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
         buildConfigField("String", "aarrstat_api_key", aarrstat_api_key)
@@ -15,7 +15,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
