--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.danielsundberg.yarr">
 
-    <application>
+    <application
         android:usesCleartextTraffic="true"
-    </application>
+    />
 
 </manifest>
